# ha-vtherm-progressive-fan

./: .copyright-header.txt  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  README.md  hacs.json  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: claude-code-review.yaml  claude.yaml  hacs-validation.yaml  mypy.yaml  prek.yaml  release-please.yaml  release.yaml  tests.yaml
custom_components/vtherm_progressive_fan/: __init__.py  config_flow.py  const.py  fan_controller.py  manifest.json  progressive_fan.py  switch.py
custom_components/vtherm_progressive_fan/brand/: README.md
custom_components/vtherm_progressive_fan/translations/: en.json  fr.json
tests/: __init__.py  conftest.py  test_controller.py  test_progressive_fan.py
