[project]
name = "ha-vtherm-progressive-fan"
version = "0.0.3" # x-release-please-version
description = "Home Assistant integration that progressively steps a mini-split's fan speed based on how far the room is from the target set by a Versatile Thermostat."
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "pytest-homeassistant-custom-component>=0.13.323",
  "mypy>=1.20.0",
  "vtherm-api>=0.2.0",
]

[tool.uv]
required-version = "==0.11.*"
prerelease = "allow"
package = false

[tool.mypy]
mypy_path = ["custom_components"]

[[tool.mypy.overrides]]
module = "vtherm_api.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
